--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,8 +2,30 @@
 
 {% load static %}
 
+<!--empty header container-->
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col">
+            <h1 class="display-4 text-success">
+                Temple Lean MS4 Project coming soon !!!
+            </h1>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
 {% block content %}
-<h1 class="display-4 text-success">
-    Temple Lean MS4 Project coming soon !!!
-</h1>
+<div class="container h-100">
+    <div class="row h-100"> 
+        <div class="col-7 col-md-6">
+            <div class="my-5">
+                <h4>
+                    <a href="" class="shop-now-button btn-lg rounded-0 text-uppercase py-3">Get Lean Now </a>
+                </h4>
+            </div>
+        </div> 
+    </div>
+</div>
+
 {% endblock %}
