footer started style awful will refine later

--- a/templates/base.html
+++ b/templates/base.html
@@ -134,6 +134,65 @@
             {% block content %}
             {% endblock %}
 
+
+            <footer class="">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <!--Blog links Section to rotate once a month with different links-->
+                            <h5>Opening Hours</h5>
+                            <ul>
+                                <li>
+                                    <strong>Mon - Thurs</strong> 5 am - 9 pm
+                                </li>
+                                <li>
+                                    <strong>Fri</strong> 5 am - 6 pm
+                                </li>
+                                <li>
+                                    <strong>Sat</strong> 8 am - 12 pm
+                                </li>
+                            </ul>
+                        </div>
+                        <!--Contact us-->
+                        <div class="col-sm-4">
+                           <h5>Contact Us</h5> 
+                           <ul>
+                                <li>
+                                    <strong>Email</strong> andrew@templelean.ie
+                                </li>
+                                <li>
+                                    <strong>Phone</strong> +353 86 195 7576
+                                </li>
+                                
+                            </ul>
+                        </div>
+                        <!--Social Media with external links to the developers own social media-->
+                        <div class="col-sm-4">
+                            <h5>Social Media</h5>
+                            <a class="social-media" href="https://www.instagram.com/andrew_burns_moves/"
+                                target="_blank"><i class="fab fa-instagram-square"></i></a>
+                            <a class="social-media" href="https://www.facebook.com/andrewburnsmoves" target="_blank"><i
+                                    class="fab fa-facebook-square"></i></a>
+                            <a class="social-media" href="https://twitter.com/aburnsmoves" target="_blank"><i
+                                    class="fab fa-twitter"></i></a>
+                            <a class="social-media"
+                                href="https://www.youtube.com/channel/UCRAIA8-iy_A7460Ix0PjTYg?view_as=subscriber"
+                                target="_blank"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <!--Sub Footer with copyright tag and link to main Temple Lean Site for Fitness Facility Gym-->
+                <div class="footer-copyright">
+                    <div class="container">
+                        © 2020 Copyright Text
+                        <a class="right" href="https://andrew-code2020.github.io/CI-MS-1-Lean-Temple/">Link to Temple
+                            Lean
+                            Gym</a>
+                    </div>
+                </div>
+            </footer>
+
+
             {% block postloadjs %}
             {% endblock %}
 
