--- a/templates/base.html
+++ b/templates/base.html
@@ -53,153 +53,144 @@
 <!--Body of Base code-->
 
 <body>
-
-
-    <body>
-
-        <body>
-            <header class="container-fluid fixed-top">
-                <div class="row">
-                    <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-                        <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                            <h2 class="logo-font text-lean my-0"><strong>Temple</strong> Lean</h2>
-                        </a>
+    <header class="container-fluid fixed-top">
+        <div class="row top-banner">
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+                <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                    <h2 class="logo-font text-lean my-0"><strong>Temple</strong> Lean</h2>
+                </a>
+            </div>
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                <form method="GET" action="">
+                    <div class="input-group w-100">
+                        <input class="form-control border border-black rounded-0" type="text" name="q"
+                            placeholder="Search our site">
+                        <div class="input-group-append">
+                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                                <span class="icon">
+                                    <i class="fab fa-searchengin"></i>
+                                </span>
+                            </button>
+                        </div>
                     </div>
-                    <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                        <form method="GET" action="">
-                            <div class="input-group w-100">
-                                <input class="form-control border border-black rounded-0" type="text" name="q"
-                                    placeholder="Search our site">
-                                <div class="input-group-append">
-                                    <button class="form-control btn btn-black border border-black rounded-0"
-                                        type="submit">
-                                        <span class="icon">
-                                            <i class="fab fa-searchengin"></i>
-                                        </span>
-                                    </button>
-                                </div>
+                </form>
+            </div>
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                    <li class="list-inline-item dropdown">
+                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            <div class="text-center">
+                                <div><i class="fas fa-running"></i></div>
+                                <p class="text-lean my-0">My Locker</p>
                             </div>
-                        </form>
-                    </div>
-                    <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                        <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                            <li class="list-inline-item dropdown">
-                                <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                    <div class="text-center">
-                                        <div><i class="fas fa-running"></i></div>
-                                        <p class="my-0">My Locker</p>
-                                    </div>
-                                </a>
-                                <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                                    {% if request.user.is_authenticated %}
-                                    {% if request.user.is_superuser %}
-                                    <a href="" class="dropdown-item">Manage Temple Lean</a>
-                                    {% endif %}
-                                    <a href="" class="dropdown-item">My Profile</a>
-                                    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                        </a>
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                            {% if request.user.is_superuser %}
+                            <a href="" class="dropdown-item">Manage Temple Lean</a>
+                            {% endif %}
+                            <a href="" class="dropdown-item">My Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                            {% else %}
+                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            {% endif %}
+                        </div>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                            href="">
+                            <div class="text-center">
+                                <div><i class="fas fa-shopping-cart"></i></div>
+                                <p class=" text-lean my-0">
+                                    {% if grand_total %}
+                                    € {{ grand_total|floatformat:2 }}
                                     {% else %}
-                                    <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                    <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                    € 0.00
                                     {% endif %}
-                                </div>
-                            </li>
-                            <li class="list-inline-item">
-                                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                                    href="">
-                                    <div class="text-center">
-                                        <div><i class="fas fa-shopping-cart"></i></div>
-                                        <p class="my-0">
-                                            {% if grand_total %}
-                                            € {{ grand_total|floatformat:2 }}
-                                            {% else %}
-                                            € 0.00
-                                            {% endif %}
-                                        </p>
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    {% if messages %}
+    <div class="message-container"></div>
+    {% endif %}
+
+    {% block page_header %}
+    {% endblock %}
+
+    {% block content %}
+    {% endblock %}
+
+
+    <footer class="">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <!--Blog links Section to rotate once a month with different links-->
+                    <h5>Opening Hours</h5>
+                    <ul>
+                        <li>
+                            <strong>Mon - Thurs</strong> 5 am - 9 pm
+                        </li>
+                        <li>
+                            <strong>Fri</strong> 5 am - 6 pm
+                        </li>
+                        <li>
+                            <strong>Sat</strong> 8 am - 12 pm
+                        </li>
+                    </ul>
                 </div>
-            </header>
+                <!--Contact us-->
+                <div class="col-sm-4">
+                    <h5>Contact Us</h5>
+                    <ul>
+                        <li>
+                            <strong>Email</strong> andrew@templelean.ie
+                        </li>
+                        <li>
+                            <strong>Phone</strong> +353 86 195 7576
+                        </li>
 
-            {% if messages %}
-            <div class="message-container"></div>
-            {% endif %}
-
-            {% block page_header %}
-            {% endblock %}
-
-            {% block content %}
-            {% endblock %}
-
-
-            <footer class="">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <!--Blog links Section to rotate once a month with different links-->
-                            <h5>Opening Hours</h5>
-                            <ul>
-                                <li>
-                                    <strong>Mon - Thurs</strong> 5 am - 9 pm
-                                </li>
-                                <li>
-                                    <strong>Fri</strong> 5 am - 6 pm
-                                </li>
-                                <li>
-                                    <strong>Sat</strong> 8 am - 12 pm
-                                </li>
-                            </ul>
-                        </div>
-                        <!--Contact us-->
-                        <div class="col-sm-4">
-                           <h5>Contact Us</h5> 
-                           <ul>
-                                <li>
-                                    <strong>Email</strong> andrew@templelean.ie
-                                </li>
-                                <li>
-                                    <strong>Phone</strong> +353 86 195 7576
-                                </li>
-                                
-                            </ul>
-                        </div>
-                        <!--Social Media with external links to the developers own social media-->
-                        <div class="col-sm-4">
-                            <h5>Social Media</h5>
-                            <a class="social-media" href="https://www.instagram.com/andrew_burns_moves/"
-                                target="_blank"><i class="fab fa-instagram-square"></i></a>
-                            <a class="social-media" href="https://www.facebook.com/andrewburnsmoves" target="_blank"><i
-                                    class="fab fa-facebook-square"></i></a>
-                            <a class="social-media" href="https://twitter.com/aburnsmoves" target="_blank"><i
-                                    class="fab fa-twitter"></i></a>
-                            <a class="social-media"
-                                href="https://www.youtube.com/channel/UCRAIA8-iy_A7460Ix0PjTYg?view_as=subscriber"
-                                target="_blank"><i class="fab fa-youtube"></i></a>
-                        </div>
-                    </div>
+                    </ul>
                 </div>
-                <!--Sub Footer with copyright tag and link to main Temple Lean Site for Fitness Facility Gym-->
-                <div class="footer-copyright">
-                    <div class="container">
-                        © 2020 Copyright Text
-                        <a class="right" href="https://andrew-code2020.github.io/CI-MS-1-Lean-Temple/">Link to Temple
-                            Lean
-                            Gym</a>
-                    </div>
+                <!--Social Media with external links to the developers own social media-->
+                <div class="col-sm-4">
+                    <h5>Social Media</h5>
+                    <a class="social-media" href="https://www.instagram.com/andrew_burns_moves/" target="_blank"><i
+                            class="fab fa-instagram-square"></i></a>
+                    <a class="social-media" href="https://www.facebook.com/andrewburnsmoves" target="_blank"><i
+                            class="fab fa-facebook-square"></i></a>
+                    <a class="social-media" href="https://twitter.com/aburnsmoves" target="_blank"><i
+                            class="fab fa-twitter"></i></a>
+                    <a class="social-media"
+                        href="https://www.youtube.com/channel/UCRAIA8-iy_A7460Ix0PjTYg?view_as=subscriber"
+                        target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
-            </footer>
+            </div>
+        </div>
+        <!--Sub Footer with copyright tag and link to main Temple Lean Site for Fitness Facility Gym-->
+        <div class="footer-copyright">
+            <div class="container">
+                © 2020 Copyright Text
+                <a class="right" href="https://andrew-code2020.github.io/CI-MS-1-Lean-Temple/">Link to Temple
+                    Lean
+                    Gym</a>
+            </div>
+        </div>
+    </footer>
 
 
-            {% block postloadjs %}
-            {% endblock %}
+    {% block postloadjs %}
+    {% endblock %}
 
 
-        </body>
-
-
-    </body>
+</body>
 
 </html>
