--- a/templates/base.html
+++ b/templates/base.html
@@ -152,10 +152,10 @@
                     <h5>Contact Us</h5>
                     <ul>
                         <li>
-                            <strong>Email</strong> andrew@templelean.ie
+                            <strong>Email <i class="fas fa-envelope-square"></i></strong> andrew@templelean.ie
                         </li>
                         <li>
-                            <strong>Phone</strong> +353 86 195 7576
+                            <strong>Phone <i class="fas fa-phone-square"></i></strong> +353 86 195 7576
                         </li>
 
                     </ul>
@@ -163,17 +163,28 @@
                 <!--Social Media with external links to the developers own social media-->
                 <div class="col-sm-4">
                     <h5>Social Media</h5>
-                    <a class="social-media" href="https://www.instagram.com/andrew_burns_moves/" target="_blank"><i
-                            class="fab fa-instagram-square"></i></a>
-                    <a class="social-media" href="https://www.facebook.com/andrewburnsmoves" target="_blank"><i
-                            class="fab fa-facebook-square"></i></a>
-                    <a class="social-media" href="https://twitter.com/aburnsmoves" target="_blank"><i
-                            class="fab fa-twitter"></i></a>
-                    <a class="social-media"
-                        href="https://www.youtube.com/channel/UCRAIA8-iy_A7460Ix0PjTYg?view_as=subscriber"
-                        target="_blank"><i class="fab fa-youtube"></i></a>
+                    <ul>
+                        <li>
+                            <a class="social-media" href="https://www.instagram.com/andrew_burns_moves/"
+                                target="_blank"><i class="fab fa-instagram-square"></i></a>
+                        </li>
+                        <li>
+                            <a class="social-media" href="https://www.facebook.com/andrewburnsmoves" target="_blank"><i
+                                    class="fab fa-facebook-square"></i></a>
+                        </li>
+                        <li>
+                            <a class="social-media" href="https://twitter.com/aburnsmoves" target="_blank"><i
+                                    class="fab fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a class="social-media"
+                                href="https://www.youtube.com/channel/UCRAIA8-iy_A7460Ix0PjTYg?view_as=subscriber"
+                                target="_blank"><i class="fab fa-youtube"></i></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
+        </div>
         </div>
         <!--Sub Footer with copyright tag and link to main Temple Lean Site for Fitness Facility Gym-->
         <div class="footer-copyright">
