main navbar added and styled. Includes directory added to templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -116,6 +116,17 @@
                 </ul>
             </div>
         </div>
+        <div class="row">
+            <nav class="navbar navbar-expand-lg navbar-color w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                {% include 'includes/mobile-top-header.html' %}
+                {% include 'includes/main-nav.html' %}
+            </nav>
+        </div>
     </header>
 
     {% if messages %}
