--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,7 +28,7 @@ body {
     color:#1a1a1a;   
 }
 
-/* from Bulma */
+
 i {
     align-items: center;
     display: inline-flex;
@@ -49,6 +49,15 @@ ul {
   padding: 0;
 }
 
+/*--Navbar--*/
+.navbar-color {
+  background-color:#80C4FF;
+  border: 1px solid black !important;  
+}
+
+a {
+  color:#1a1a1a;
+}
 
 footer {
     background-color:#80C4FF;
