--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
                 <form method="GET" action="">
                     <div class="input-group w-100">
                         <input class="form-control border border-black rounded-0" type="text" name="q"
-                            placeholder="Search our site">
+                            placeholder="Search our fitness community">
                         <div class="input-group-append">
                             <button class="form-control btn btn-black border border-black rounded-0" type="submit">
                                 <span class="icon">
@@ -119,7 +119,7 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg navbar-color w-100">
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    data-target="main-nav" aria-controls="main-nav" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -196,7 +196,7 @@
                 </div>
             </div>
         </div>
-        </div>
+
         <!--Sub Footer with copyright tag and link to main Temple Lean Site for Fitness Facility Gym-->
         <div class="footer-copyright">
             <div class="container">
