--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,30 +1,30 @@
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto text-lean">
+<div class="collapse navbar-collapse" id="main-nav">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle text-lean" href="#" id="facilities" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Facilities
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <div class="dropdown-menu" aria-labelledby="facilities">
           <a class="dropdown-item" href="#">Free Weight Gym</a>
           <a class="dropdown-item" href="#">Cardio Gym</a>
           <a class="dropdown-item" href="#">Café</a>
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle text-lean" href="#" id="classes" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Classes
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <div class="dropdown-menu" aria-labelledby="classes">
           <a class="dropdown-item" href="#">Kettlebells</a>
           <a class="dropdown-item" href="#">Lean Machine</a>
           <a class="dropdown-item" href="#">Pilates</a>
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle text-lean" href="#" id="membership" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Membership
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <div class="dropdown-menu" aria-labelledby="memebership">
           <a class="dropdown-item" href="#">Online</a>
           <a class="dropdown-item" href="#">Public</a>
           <a class="dropdown-item" href="#">Corporate</a>
@@ -32,7 +32,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Coaches</a>
+        <a class="nav-link text-lean" href="#">Coaches</a>
       </li>
     </ul>
     
