navbar refined main nav and top nav interference rectified. toggler icon needs style

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -55,6 +55,11 @@ ul {
   border: 1px solid black !important;  
 }
 
+.navbar-toggler{
+    border: 1px solid black !important;
+    color:1px solid black;
+}
+
 
 footer {
     background-color:#80C4FF;
