--- a/templates/base.html
+++ b/templates/base.html
@@ -121,7 +121,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#main-nav" aria-controls="main-nav" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"> <i class="fas fa-sliders-h"></i></span>
+                    <span class="navbar-toggler-icon"> <i class="fas fa-door-open"></i> </span>
                 </button>
                 {% include 'includes/mobile-top-header.html' %}
                 {% include 'includes/main-nav.html' %}
