--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,5 +1,5 @@
 <div class="collapse navbar-collapse" id="main-nav">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav w-auto mx-auto">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-lean" href="#" id="facilities" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Facilities
