--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,7 +19,7 @@
         <div class="col-7 col-md-6">
             <div class="my-5">
                 <h4>
-                    <a href="" class="shop-now-button btn-lg rounded-0 text-uppercase py-3">Get Lean Now </a>
+                    <a href="" class="gym-now-button btn-primary btn-lg rounded-0 text-uppercase py-3">Get Lean Now </a>
                 </h4>
             </div>
         </div> 
