--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,10 +16,10 @@
 {% block content %}
 <div class="container h-100">
     <div class="row h-100"> 
-        <div class="col-7 col-md-6">
+        <div class="col-7 col-md-6 my-auto">
             <div class="my-5">
                 <h4>
-                    <a href="" class="gym-now-button btn-primary btn-lg rounded-0 text-uppercase py-3">Get Lean Now </a>
+                    <a href="" class="gym-now-button btn-lg rounded-0 text-uppercase py-3">Get Lean Now </a>
                 </h4>
             </div>
         </div> 
