--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,5 @@
 
-/*--Color text #1a1a1a --*/
+/*--Color text #1a1a1a background color #80C4FF--*/
 /*--General--*/
 
 
@@ -12,8 +12,8 @@ html {
 
 body {
     background: url('/media/homebackground.jpg') no-repeat center center fixed;
-    background-size: cover;
-    height: calc(100vh - 164px);
+    background-size: contain;
+    height: calc(100vh - 175px);
     color: #1a1a1a;
     font-family: 'RocknRoll One';
 }
@@ -43,7 +43,14 @@ i {
 
 /*---buttons--*/
 .gym-now-button{
-    
+    background: #80C4FF;
+    color:#1a1a1a;
+    min-width: 260px;
+}
+
+.gym-now-button:hover{
+    background:#1a1a1a;
+    color:#80C4FF;
 }
 
 /*--Footer--*/
@@ -72,9 +79,11 @@ footer {
 
 .social-media i {
   font-size: 36px;
-  padding-left: 30px;
+  padding-left: auto;
   color: #1a1a1a;
 }
+
+
 
 
 /*--Media Queries--*/
