--- a/templates/base.html
+++ b/templates/base.html
@@ -118,9 +118,8 @@
         </div>
         <div class="row">
             <nav class="navbar navbar-expand-lg navbar-color w-100">
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#main-nav" aria-controls="main-nav" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+                    aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"> <i class="fas fa-door-open"></i> </span>
                 </button>
                 {% include 'includes/mobile-top-header.html' %}
@@ -163,11 +162,11 @@
                     <h5>Contact Us</h5>
                     <ul>
                         <li>
-                            <strong>Email <i class="fas fa-envelope-square"></i></strong> 
+                            <strong>Email <i class="fas fa-envelope-square"></i></strong>
                             <p>andrew@templelean.ie</p>
                         </li>
                         <li>
-                            <strong>Phone <i class="fas fa-phone-square"></i></strong> 
+                            <strong>Phone <i class="fas fa-phone-square"></i></strong>
                             <p> +353 86 195 7576</p>
                         </li>
 
@@ -176,31 +175,21 @@
                 <!--Social Media with external links to the developers own social media-->
                 <div class="col-sm-4">
                     <h5>Social Media</h5>
-                    <ul>
-                        <li>
-                            <a class="social-media" href="https://www.instagram.com/andrew_burns_moves/"
-                                target="_blank"><i class="fab fa-instagram-square"></i></a>
-                        </li>
-                        <li>
-                            <a class="social-media" href="https://www.facebook.com/andrewburnsmoves" target="_blank"><i
-                                    class="fab fa-facebook-square"></i></a>
-                        </li>
-                        <li>
-                            <a class="social-media" href="https://twitter.com/aburnsmoves" target="_blank"><i
-                                    class="fab fa-twitter"></i></a>
-                        </li>
-                        <li>
-                            <a class="social-media"
-                                href="https://www.youtube.com/channel/UCRAIA8-iy_A7460Ix0PjTYg?view_as=subscriber"
-                                target="_blank"><i class="fab fa-youtube"></i></a>
-                        </li>
-                    </ul>
+                    <a class="social-media" href="https://www.instagram.com/andrew_burns_moves/" target="_blank"><i
+                            class="fab fa-instagram-square"></i></a>
+                    <a class="social-media" href="https://www.facebook.com/andrewburnsmoves" target="_blank"><i
+                            class="fab fa-facebook-square"></i></a>
+                    <a class="social-media" href="https://twitter.com/aburnsmoves" target="_blank"><i
+                            class="fab fa-twitter"></i></a>
+                    <a class="social-media"
+                        href="https://www.youtube.com/channel/UCRAIA8-iy_A7460Ix0PjTYg?view_as=subscriber"
+                        target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
 
         <!--Sub Footer with copyright tag and link to main Temple Lean Site for Fitness Facility Gym-->
-        <div class="footer-copyright">
+        <div class="footer-copyright text-center">
             <div class="container">
                 © 2020 Copyright Text
                 <a class="right" href="https://andrew-code2020.github.io/CI-MS-1-Lean-Temple/">Link to Temple
