products paged rendering with image and information displayed

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,49 +2,45 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>    
-<div class="container">
-        <div class="row">
-            <div class="col">
-                {{ products }}
-            </div>
+<div class="overlay"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col text-center mt-3">
+            <h2 class="logo-font">Fitness Classes and Memberships</h2>
+            <hr class="w-50 mb-1">
         </div>
     </div>
-
-<!--Card Deck-->
-<div class="card-deck">
-  <div class="card">
-    <img src="#" class="card-img-top" alt="#">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <!--Card Deck to display Temple Lean Products-->
+    <div class="row">
+        {% for product in products %}
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+            <div class="card-deck">
+                <div class="card">
+                    {% if product.image %}
+                    <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                    {% else %}
+                    <img src="#" class="card-img-top" alt="{{ product.name }}">
+                    {% endif %}
+                    <div class="card-body">
+                        <h5 class="card-title">{{ product.name }}</h5>
+                        <p class="card-text">{{ product.description }} </p>
+                        <p class="card-text"><strong>€{{ product.price }} </strong></p>
+                        <p class="card-text"><a class="buy-now-button btn-lg">Buy Now</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </div>
-  </div>
-  <div class="card">
-    <img src="#" class="card-img-top" alt="#">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
 </div>
+
 
 {% endblock %}
