--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -16,6 +16,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="classes">
           <a class="dropdown-item" href="#">Kettlebells</a>
+          <a class="dropdown-item" href="#">Kettlebells</a>
           <a class="dropdown-item" href="#">Lean Machine</a>
           <a class="dropdown-item" href="#">Pilates</a>
         </div>
