products added and images rendering. Temporary path to all products in class then dropdown to Online

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -15,7 +15,7 @@
           Classes
         </a>
         <div class="dropdown-menu" aria-labelledby="classes">
-          <a class="dropdown-item" href="#">Kettlebells</a>
+          <a class="dropdown-item" href="{% url 'products' %}">Online</a>
           <a class="dropdown-item" href="#">Kettlebells</a>
           <a class="dropdown-item" href="#">Lean Machine</a>
           <a class="dropdown-item" href="#">Pilates</a>
