--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -11,21 +11,25 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container-fluid"></div>
-<div class="card mb-3">
-    <div class="row no-gutters">
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-            {% if product.image %}
-            <img src="{{ product.image.url }}" class="img-fluid" alt="{{ product.name }}">
-            {% else %}
-            <img src="{{ MEDIA_URL }}noimage.jpg" class="img-fluid" alt="{{ product.name }}">
-            {% endif %}
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-            <div class="card-body">
-                <h5 class="card-title"> {{ product.name }}</h5>
-                <p class="card-text"></p>
-                <p class="card-text"><a class="buy-now-button btn-lg">Add to Gym bag</a></p>
+<div class="container-fluid">
+    <div class="card mb-3">
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+                {% if product.image %}
+                <a href="{{ product.image.url }}" target="_blank">
+                    <img src="{{ product.image.url }}" class="img-fluid" alt="{{ product.name }}">
+                </a>
+                {% else %}
+                <img src="{{ MEDIA_URL }}noimage.jpg" class="img-fluid" alt="{{ product.name }}">
+                {% endif %}
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card-body">
+                    <h5 class="card-title">{{ product.name }}</h5>
+                    <p class="card-text">{{ product.description }}</p>
+                    <p class="card-text">€{{ product.price }}</p>
+                    <p class="card-text"><a class="buy-now-button btn-lg">Add to Gym bag</a></p>
+                </div>
             </div>
         </div>
     </div>
