home button added to product details page. Styling added to css but not rednering properly yet

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -28,7 +28,8 @@
                     <h5 class="card-title">{{ product.name }}</h5>
                     <p class="card-text">{{ product.description }}</p>
                     <p class="card-text">€{{ product.price }}</p>
-                    <p class="card-text"><a class="buy-now-button btn-lg">Add to Gym bag</a></p>
+                    <p class="card-text"><a href="#" class="homepagebutton btn btn-secondary btn-lg">Home</a></p>
+                    <p class="card-text"><a href="#" class="buy-now-button btn-lg">Add to Gym bag</a></p>
                 </div>
             </div>
         </div>
