--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -16,7 +16,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="classes">
           <a class="dropdown-item" href="{% url 'products' %}">Online</a>
-          <a class="dropdown-item" href="#">Kettlebells</a>
+          <a class="dropdown-item" href="{% url 'products' %}?category=kettlebell_class">Kettlebells</a>
           <a class="dropdown-item" href="#">Lean Machine</a>
           <a class="dropdown-item" href="#">Pilates</a>
         </div>
@@ -29,7 +29,7 @@
           <a class="dropdown-item" href="#">Online</a>
           <a class="dropdown-item" href="#">Public</a>
           <a class="dropdown-item" href="#">Corporate</a>
-          <a class="dropdown-item" href="#">Student</a>
+          <a class="dropdown-item" href="{% url 'products' %}?category=membership_student">Student</a>
         </div>
       </li>
       <li class="nav-item">
