--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -33,7 +33,8 @@
                         <h5 class="card-title">{{ product.name }}</h5>
                         <p class="card-text">{{ product.description }} </p>
                         <p class="card-text"><strong>€{{ product.price }} </strong></p>
-                        <p class="card-text"><a href = "{% url 'product_detail' product.id %}"class="buy-now-button btn-lg">Buy Now</a></p>
+                        <p class="card-text"><a href="{% url 'product_detail' product.id %}"
+                                class="buy-now-button btn-lg">Buy Now</a></p>
                     </div>
                 </div>
             </div>
@@ -41,6 +42,21 @@
         {% endfor %}
     </div>
 </div>
+<div class="btt-button shadow-sm rounded-0 border border-black">
+    <a class="btt-link d-flex h-100">
+        <i class="far fa-arrow-alt-circle-up text-lean mx-auto my-auto"></i>
+    </a>
+</div>
 
 
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	</script>
+    
 {% endblock %}
