--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -16,5 +16,31 @@
 {% block content %}
 <div class="overlay"></div>
 
+<div class="container mb-2">
+        <div class="row">
+            <div class="col">
+                <hr>
+                <h2 class="logo-font mb-4">Gym Bag</h2>
+                <hr>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                {% if bag_items %}
+                    <div class="table-responsive rounded"></div>
+                {% else %}
+                    <p class="lead mb-5">Your bag is empty.</p>
+                    <a href="{% url 'products' %}" class="btn-secondary rounded-0 btn-lg">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left btn-secondary"></i>
+                        </span>
+                        <span class="text-uppercase">Back to Gym Floor</span>
+                    </a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+
 
 {% endblock %}
