--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -28,8 +28,33 @@
                     <h5 class="card-title">{{ product.name }}</h5>
                     <p class="card-text">{{ product.description }}</p>
                     <p class="card-text">€{{ product.price }}</p>
-                    <p class="card-text"><a href="#" class="homepagebutton btn btn-secondary btn-lg">Home</a></p>
-                    <p class="card-text"><a href="#" class="buy-now-button btn-lg">Add to Gym bag</a></p>
+                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-50">
+                                    <div class="input-group">
+                                        <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                            min="1" max="99" data-item_id="{{ product.id }}"
+                                            id="id_qty_{{ product.id }}">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <input type="submit" class="buy-now-button btn-lg rounded-0 text-uppercase mt-5"
+                                    value="Add to Bag">
+                                <hr>
+                                <a href="{% url 'products' %}" class="btn-secondary btn-lg rounded-0 mt-5">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left btn-secondary"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                            </div>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
