bag refined and logic added contexted.py. css classes on buttons added

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -44,7 +44,7 @@
                                 {% with product.has_days as s %}
                                 {% if s %}
                                 <div class="col-12">
-                                    <p><strong>Size:</strong></p>
+                                    <p><strong>Day:</strong></p>
                                     <select class="form-control rounded-0 w-50" name="product_days" id='id_product_days'>
                                         <option value="monday">Monday</option>
                                         <option value="tuesday">Tuesday</option>
