--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -35,6 +35,7 @@
                             <tr>
                                 <th scope="col">Product Info</th>
                                 <th scope="col"></th>
+                                <th scope="col">Day</th>
                                 <th scope="col">Price</th>
                                 <th scope="col">Qty</th>
                                 <th scope="col">Subtotal</th>
@@ -51,13 +52,18 @@
                                 <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
                             </td>
                             <td class="py-3">
+                                <p class="my-0"><strong>Day :
+                                    {% if item.product.has_days %}{{ item.days|upper }}{% else %}N/A{% endif %}
+                                </p>
+                            </td>
+                            <td class="py-3">
                                 <p class="my-0">€{{ item.product.price }}</p>
                             </td>
                             <td class="py-3">
                                 <p class="my-0">{{ item.quantity }}</p>
                             </td>
                             <td class="py-3">
-                                <p class="my-0">€{{ total|floatformat:2 }}</p>
+                                <p class="my-0">€{{ sub_total|floatformat:2 }}</p>
                             </td>
                         </tr>
                         {% endfor %}
