add days is rendering in code on shopping bag page. Need to fix that

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -45,7 +45,7 @@
                                 {% if s %}
                                 <div class="col-12">
                                     <p><strong>Day:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="product_days" id='id_product_days'>
+                                    <select class="form-control rounded-0 w-50" name="product_days" id="id_product_days">
                                         <option value="monday">Monday</option>
                                         <option value="tuesday">Tuesday</option>
                                         <option value="wednesday" selected>Wednesday</option>
