--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -35,14 +35,14 @@
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-100">
                                     <div class="input-group">
-                                        <div class="input-group-prepend">
+                                        <div class="input-group-prepend w-75">
                                             <button class="decrement-qty btn .buy-now-button rounded-0"
                                                 data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-minus"></i>
                                                 </span>
                                             </button>
-                                            <input class="form-control qty_input" type="number" name="quantity"
+                                            <input class="form-control qty_input text-center" type="number" name="quantity"
                                                 value="1" min="1" max="99" data-item_id="{{ product.id }}"
                                                 id="id_qty_{{ product.id }}">
                                             <div class="input-group-append">
