--- a/templates/base.html
+++ b/templates/base.html
@@ -216,7 +216,7 @@
 
     {% block postloadjs %}
     <script type="text/javascript">
-        $('toast').toast('show');
+        $('.toast').toast('show');
     </script>
     {% endblock %}
 
