--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -3,7 +3,7 @@
     data-autohide="false" style="min-height: 200px;">
 
     <!--Toast Header-->
-    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast" role="alert" data-delay="10000" aria-live="assertive" aria-atomic="true">
         <div class="arrow-up arrow-danger"></div>
         <div class="w-100 toast-capper bg-danger"></div>
         <div class="toast-header">
