--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -3,7 +3,7 @@
     data-autohide="false" style="min-height: 200px;">
 
     <!-- Toast Header -->
-    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast" role="alert" data-delay="10000" aria-live="assertive" aria-atomic="true">
         <div class="arrow-up arrow-info"></div>
         <div class="w-100 toast-capper bg-info"></div>
         <div class="toast-header">
