checkout success page rendering with basic information. Django admin terminal showing orderand relevant details. Stripe also showing payment events

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -28,7 +28,7 @@
             <hr>
             <h2 class="logo-font mb-4">Thank you for your purchase</h2>
             <hr>
-            <p class="text-lean">Your Temple Lean purchases details are below. A confirmation email will be sent to
+            <p class="text-lean">Your Temple Lean purchase details are below. A confirmation email will be sent to
                 <strong> {{order.email}}</strong></p>
         </div>
     </div>
