--- a/templates/base.html
+++ b/templates/base.html
@@ -155,7 +155,7 @@
     {% endblock %}
 
 
-    <footer class="">
+    <footer class="fixed-bottom">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
