loading overlay added but not rendering

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="col-9">
                         <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                        <p class="my-0 small">Size:
+                        <p class="my-0 small">Day:
                             {% if item.product.has_days %}{{ item.days|upper }}{% else %}N/A{% endif %}</p>
                         <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
                     </div>
