--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -40,3 +40,24 @@
     color: #1a1a1a;
     border: 1px solid #80C4FF;
 }
+
+/*----*/
+
+#loading-overlay {
+	display: none;
+	position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #80C4FF;
+    z-index: 9999;
+}
+
+.spinner-border {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    height: 100%;
+}
