--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -71,7 +71,7 @@
                         <p class="small mb-0 text-lean font-weight-bold">
                             {{ item.product.name }}
                             {% if item.product_days %} - Day
-                                {{ item.product.days|upper }}
+                            {{ item.product.days|upper }}
                             {% endif %}
                         </p>
                     </div>
@@ -82,28 +82,34 @@
                 {% endfor %}
                 <hr>
                 <div class="row">
-                        <div class="col">
-                            <small class="text-muted">Personal Details of Order:</small>
-                        </div>
+                    <div class="col">
+                        <small class="text-muted">Personal Details of Order:</small>
                     </div>
+                </div>
 
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold">Full Name</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.full_name }}</p>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold">Email</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.email }}</p>
-                        </div>
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black font-weight-bold">Full Name</p>
                     </div>
-                
+                    <div class="col-12 col-md-8 text-md-right">
+                        <p class="mb-0">{{ order.full_name }}</p>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black font-weight-bold">Email</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right">
+                        <p class="mb-0">{{ order.email }}</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
+</div>
+<div id="loading-overlay">
+    <button class="btn btn-primary" type="button" disabled>
+        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+        Loading Temple Lean Activity...
+    </button>
 </div>
 {% endblock %}
