checkout app countries package installed. Profile app added. Models in profile app created.PrProfiles project level code added and views and urls created

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -61,3 +61,16 @@
     margin: 0;
     height: 100%;
 }
+
+
+/*--Select Option--*/
+
+select,
+select option {
+    color: #1a1a1a ;
+}
+
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
+}
