css for footer modified with margins

--- a/templates/base.html
+++ b/templates/base.html
@@ -155,10 +155,10 @@
     {% endblock %}
 
 
-    <footer class="fixed-bottom">
+    <footer class="mt-2">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 mt-2">
                     <!--Blog links Section to rotate once a month with different links-->
                     <h5>Opening Hours</h5>
                     <ul>
