facilities app started and initial directory and MVC established. Current error TemplateDoesNotExist

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,7 +5,7 @@
           Facilities
         </a>
         <div class="dropdown-menu" aria-labelledby="facilities">
-          <a class="dropdown-item" href="#">Free Weight Gym</a>
+          <a class="dropdown-item" href="{% url 'facilities' %}">Free Weight Gym</a>
           <a class="dropdown-item" href="#">Cardio Gym</a>
           <a class="dropdown-item" href="#">Café</a>
         </div>
