refined mobile top header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -154,6 +154,20 @@ footer {
     .header-container {
         padding-top: 175px;
     }
+    .display-4.logo-font.text-lean {
+        font-size: 2rem;
+    }
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
 }
 
 /*--Toasts--*/
