profile model and view refined to add form fields. Outline of card added to begin rendering fields in profile form

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -31,7 +31,27 @@
         </div>
     </div>
 </div>
-{{profile}}
-    
-{% endblock %}
+<div class="row">
+    <div class="col-12 col-lg-6">
+        <p class="text-muted">Profile Information</p>
+        <div class="card-deck">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <button class="card-text gym-now-button">Update profile</button>
+                </div>
+            </div>
 
+
+        </div>
+
+        <div class="col-12 col-lg-6">
+
+        </div>
+    </div>
+</div>
+
+{% endblock %}
