toasts justify changed to end to move toast to right

--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,5 +1,5 @@
 <!--Toast Container-->
-<div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center custom-toast"
+<div aria-live="polite" aria-atomic="true" class="d-flex justify-content-end align-items-center custom-toast"
     data-autohide="false" style="min-height: 200px;">
 
     <!--Toast Header-->
