--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -76,7 +76,7 @@
                         </p>
                     </div>
                     <div class="col-12 col-md-8 text-md-right">
-                        <p class="small mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
+                        <p class="small mb-0">{{ item.quantity }} @ €{{ item.product.price }} each</p>
                     </div>
                 </div>
                 {% endfor %}
@@ -101,11 +101,30 @@
                         <p class="mb-0">{{ order.email }}</p>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-12 col-lg-7 text-right">
+        {% if from_profile %}
+        <a href="{% url 'profile' %}" class="btn btn-secondary rounded-0 my-2">
+            <span class="icon mr-2">
+                <i class="fas fa-angle-left"></i>
+            </span>
+            <span class="text-uppercase">Back to Profile</span>
+        </a>
+        {% else %}
+        <a href="{% url 'products' %}?category=public_membership" class="btn btn-secondary rounded-0 my-2">
+            <span class="icon mr-2">
+                <i class="fas fa-gifts"></i>
+            </span>
+            <span class="text-uppercase">Checkout our Membership Offers</span>
+        </a>
+        {% endif %}
+    </div>
+</div>
+
 <div id="loading-overlay">
     <button class="btn btn-primary" type="button" disabled>
         <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
