get lean now button href added to include rendering all products or classes and memberships

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,6 +22,11 @@ input[name='q']::placeholder {
     color: #aab7c4;
 }
 
+/*--Card image universal height to display each image evenly--*/
+.card-img, .card-img-top{
+ height:250px;
+}
+
 
 /*--Home page--*/
 
