--- a/templates/base.html
+++ b/templates/base.html
@@ -159,7 +159,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 mt-2">
-                    <!--Blog links Section to rotate once a month with different links-->
+                    <!--Opening Hours information-->
                     <h5>Opening Hours</h5>
                     <ul>
                         <li>
