--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -11,7 +11,7 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-lean" href="#" id="classes" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle text-lean" href="{% url 'products' %}?category=online_class,kettlebell_class,lean_machine,pilates" id="classes" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Classes
         </a>
         <div class="dropdown-menu" aria-labelledby="classes">
