facilities model edited and refined and regsitered to Django DB

--- a/facilities/templates/facilities/freeweights.html
+++ b/facilities/templates/facilities/freeweights.html
@@ -16,17 +16,19 @@
 {% block content %}
 <div class="container h-100">
     <div class="overlay"></div>
+    <!--{% for facility in facilties %}-->
     <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
                 <img src="{{ MEDIA_URL }}noimage.jpg}}" alt="Avatar" style="width:300px;height:300px;">
             </div>
             <div class="flip-card-back">
-                <h1>John Doe</h1>
-                <p>Architect & Engineer</p>
-                <p>We love that guy</p>
+                <h1></h1>
+                <p></p>
+                <p></p>
             </div>
         </div>
+        <!--{% endfor %}-->
     </div>
 </div>
 
