facilties content added card flip and navigation not working correctly

--- a/facilities/templates/facilities/freeweights.html
+++ b/facilities/templates/facilities/freeweights.html
@@ -2,9 +2,7 @@
 
 {% load static %}
 
-{% block extra_css %}
-<link rel="stylesheet" href="{% static 'facilities/css/facilities.css' %}">
-{% endblock %}
+
 
 <!--empty header container-->
 {% block page_header %}
@@ -19,32 +17,35 @@
 
 {% block content %}
 <div class="container h-100">
-    <div class="overlay">Hello</div>
+    <div class="overlay"></div>
     <div class="row">
         <div class="col text-center mt-3">
             <h2 class="logo-font">Facilties</h2>
             <hr class="w-50 mb-1">
         </div>
     </div>
-    
-    {% for facility in facilties %}
-    <div class="flip-card">
-        <div class="flip-card-inner">
-            <div class="flip-card-front">
-                {% if facility.image %}
-                    <img src="{{ facility.image.url }}" class="card-img-top" alt="{{ facility.name }}">
-                    {% else %}
-                    <img src="{{ MEDIA_URL }}noimage.jpg" class="card-img-top" alt="{{ facility.name }}">
-                {% endif %}
-            </div>
-            <div class="flip-card-back">
-                <h1>{{ facility.name }}</h1>
-                <p>{{ facility.description }}</p>
-                <p>{{ facility.testimonial }}</p>
-                <p>{{ facility.rating }}</p>
+    <div class="row">
+        {% for facility in facilities %}
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        {% if facility.image %}
+                        <img src="{{ facility.image.url }}" class="card-img-top" alt="{{ facility.name }}">
+                        {% else %}
+                        <img src="{{ MEDIA_URL }}noimage.jpg" class="card-img-top" alt="{{ facility.name }}">
+                        {% endif %}
+                    </div>
+                    <div class="flip-card-back">
+                        <h5>{{ facility.name }}</h5>
+                        <p>{{ facility.description }}</p>
+                        <p>{{ facility.testimonial }}</p>
+                        <p>Current Rating out of 5 {{ facility.rating }}</p>
+                    </div>
+                </div>
             </div>
         </div>
-    {% endfor %}
+        {% endfor %}
     </div>
 </div>
 
