--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,9 +5,9 @@
           Facilities
         </a>
         <div class="dropdown-menu" aria-labelledby="facilities">
-          <a class="dropdown-item" href="{% url 'facilities' %}">Free Weight Gym</a>
+          <a class="dropdown-item" href="{% url 'facilities' %}?facilitycategory=free_weights_room">Free Weight Gym</a>
           <a class="dropdown-item" href="#">Cardio Gym</a>
-          <a class="dropdown-item" href="#">Café</a>
+          <a class="dropdown-item" href="{% url 'facilities' %}?facilitycategory=cafe_coffee">Café</a>
         </div>
       </li>
       <li class="nav-item dropdown">
